--- a/.github/workflows/fe.yml
+++ b/.github/workflows/fe.yml
@@ -46,7 +46,7 @@ jobs:
         run: cd fe && yarn
 
       - name: Run linter 👀
-        run: yarn lint
+        run: cd fe && yarn lint
 
       - name: Run tests 🧪
-        run: yarn test
+        run: cd fe && yarn test
