--- a/fe/package.json
+++ b/fe/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.13.1",
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
+    "moment": "^2.29.1",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
