--- a/fe/tsconfig.json
+++ b/fe/tsconfig.json
@@ -27,7 +27,8 @@
       "@nuxt/types",
       "@nuxtjs/axios",
       "@types/node",
-      "vuetify"
+      "vuetify",
+      "moment"
     ]
   },
   "exclude": [
