--- a/fe/package.json
+++ b/fe/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build && nuxt generate",
+    "build": "nuxt build && nuxt generate && yarn afterbuild",
     "start": "nuxt start",
+    "afterbuild": "node afterbuild.js",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "yarn lint:js",
     "test": "jest"
@@ -35,5 +36,8 @@
     "less-loader": "^7.3.0",
     "ts-jest": "^26.5.4",
     "vue-jest": "^3.0.4"
+  },
+  "resolutions": {
+      "@nuxtjs/vuetify/**/sass": "1.32.12"
   }
 }
