--- a/fe/package.json
+++ b/fe/package.json
@@ -23,6 +23,7 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/robots": "^2.5.0",
     "@nuxtjs/vuetify": "^1.11.3",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
@@ -38,6 +39,6 @@
     "vue-jest": "^3.0.4"
   },
   "resolutions": {
-      "@nuxtjs/vuetify/**/sass": "1.32.12"
+    "@nuxtjs/vuetify/**/sass": "1.32.12"
   }
 }
