--- a/fe/package.json
+++ b/fe/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@lemonneko/vuetify-message": "^1.1.7",
     "@nuxtjs/axios": "^5.13.1",
     "axios": "^0.21.1",
     "core-js": "^3.14.0",
