--- a/.github/workflows/fe.yml
+++ b/.github/workflows/fe.yml
@@ -28,6 +28,13 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           check-latest: true
+      
+      # 自动同意 dependabot 的 pr
+      - name: Auto approve
+        uses: cognitedata/auto-approve-dependabot-action@v3.0.1
+        if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get yarn cache directory path 🛠
         id: yarn-cache-dir-path
