--- a/.github/workflows/fe.yml
+++ b/.github/workflows/fe.yml
@@ -5,10 +5,7 @@ on:
     branches:
       - main
       - master
-  pull_request:
-    branches:
-      - main
-      - master
+  pull_request_target:
 
 jobs:
   ci:
