💚 使用自己的用户 approve pr

--- a/.github/workflows/fe.yml
+++ b/.github/workflows/fe.yml
@@ -33,7 +33,7 @@ jobs:
         uses: hmarr/auto-approve-action@v2
         if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
         with:
-          github-token: ${{ secrets.SOME_USERS_PAT }}
+          github-token: ${{ secrets.PAT }}
 
       - name: Get yarn cache directory path 🛠
         id: yarn-cache-dir-path
