:white_check_mark: 添加单元测试

--- a/be/internal/config/config.test.yaml
+++ b/be/internal/config/config.test.yaml
@@ -3,5 +3,6 @@ database:
   host: localhost
   port: 15432
   username: postgres
-  password: postgres
+  password: 123456
   database: postgres
+  sslMode: disable
