--- a/fe/package.json
+++ b/fe/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.25.2",
     "moment": "^2.29.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "vuetify": "^2.6.10"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
