:green_heart: 使用 PAT 代替 GITHUB_TOKEN

--- a/.github/workflows/fe.yml
+++ b/.github/workflows/fe.yml
@@ -59,6 +59,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         if: github.actor != 'dependabot[bot]' && github.actor != 'dependabot-preview[bot]'
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PAT }}
           publish_dir: fe/dist
           publish_branch: pages  # deploying branch
