--- a/be/internal/config/config.test.yaml
+++ b/be/internal/config/config.test.yaml
@@ -3,6 +3,6 @@ database:
   host: localhost
   port: 15432
   username: postgres
-  password: abc123
+  password: 123456
   database: postgres
   sslMode: disable
