--- a/.github/workflows/be.yml
+++ b/.github/workflows/be.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Get image tag from git tag
         id: image_tag
-        run: echo "::set-output tagName=$(echo '${{ github.ref_name }}' | tr '/' ':')"
+        run: echo "::set-output tagName=${{ github.ref_name }}" | tr '/' ':'
 
       - name: Login to GitHub
         uses: docker/login-action@v1
