--- a/.github/workflows/be.yml
+++ b/.github/workflows/be.yml
@@ -1,4 +1,4 @@
-name: fe
+name: backend build
 
 permissions:
   packages: write
@@ -47,13 +47,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - run:
-          cd be
-
       - name: Build And Push Docker Image
         uses: docker/build-push-action@v2
         with:
           push: true
+          context: ./be
           tags: |
             ghcr.io/lemonnekogh/${{ steps.image_tag.outputs.tagName }}
             ghcr.io/lemonnekogh/qboxb:latest
