:sparkles: 为 TG Bot 模块添加配置，解决依赖循环

--- a/be/internal/config/config.test.yaml
+++ b/be/internal/config/config.test.yaml
@@ -6,3 +6,8 @@ database:
   password: 123456
   database: postgres
   sslMode: disable
+telegram:
+  enabled: false
+  apiToken:
+  chatId:
+  sendErrors:
